--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,19 @@ authors = [
 ]
 requires-python = "^3.13"
 dependencies = [
-    "google-cloud-pubsub (>=2.34.0,<3.0.0)"
+    "google-cloud-pubsub (>=2.34.0,<3.0.0)",
+    "aio-pika (>=9.5.8,<10.0.0)",
+    "pydantic-settings (>=2.12.0,<3.0.0)"
 ]
 
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry]
+packages = [{include = "aegis_agents", from = "src"}]
+
+[tool.pyright]
+reportMissingImports = false
+reportMissingTypeStubs = false
