feat: Refactor messaging system to use Google Cloud Pub/Sub, remove RabbitMQ support

--- a/.env.example
+++ b/.env.example
@@ -2,24 +2,10 @@
 # Copy this file to .env and adjust values as needed
 
 # =============================================================================
-# MESSAGING CONFIGURATION
+# MESSAGING CONFIGURATION (Google Cloud Pub/Sub)
 # =============================================================================
 
-# Backend selection: "rabbitmq" or "pubsub"
-AEGIS_MESSAGING_BACKEND=rabbitmq
-
-# -----------------------------------------------------------------------------
-# RabbitMQ Settings (used when AEGIS_MESSAGING_BACKEND=rabbitmq)
-# -----------------------------------------------------------------------------
-AEGIS_MESSAGING_RABBITMQ_HOST=localhost
-AEGIS_MESSAGING_RABBITMQ_PORT=5672
-AEGIS_MESSAGING_RABBITMQ_USER=guest
-AEGIS_MESSAGING_RABBITMQ_PASSWORD=guest
-AEGIS_MESSAGING_RABBITMQ_VHOST=/
-
-# -----------------------------------------------------------------------------
-# Google Cloud Pub/Sub Settings (used when AEGIS_MESSAGING_BACKEND=pubsub)
-# -----------------------------------------------------------------------------
+# Google Cloud Pub/Sub Settings
 AEGIS_MESSAGING_PUBSUB_PROJECT_ID=your-gcp-project-id
 
 # Optional: Use Pub/Sub emulator for local development
